--- a/homework_04.ipynb
+++ b/homework_04.ipynb
@@ -29,7 +29,7 @@
         "import requests\n",
         "import re\n",
         "\n",
-        "from decorators import benchmark, logging, counter, memo, full_info"
+        "from decorators import benchmark, logging, counter, memo"
       ]
     },
     {
@@ -78,15 +78,18 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Функция была вызвана 1 раз без параметров\n",
-            "Время выполнения функции word_count: 0:00:02.589840\n",
+            "Функция была вызвана 1 раз\n",
+            "Время выполнения функции word_count: 0:00:02.558599\n",
             "Функция была вызвана c параметрами: ('whole',)\n",
             "Cлово whole встречается 176 раз\n"
           ]
         }
       ],
       "source": [
-        "def word_count(word, url=BOOK_PATH):\n",
+        "@counter\n",
+        "@logging\n",
+        "@benchmark\n",
+        "def word_count(word: str, url: str = BOOK_PATH) -> str:\n",
         "    \"\"\"\n",
         "    Функция для посчета указанного слова на html-странице\n",
         "    \"\"\"\n",
@@ -103,41 +106,18 @@
         "    return f\"Cлово {word} встречается {cnt} раз\"\n",
         "\n",
         "\n",
-        "res1 = counter(logging(benchmark(word_count)))\n",
-        "print(res1(\"whole\"))"
+        "print(word_count(\"whole\"))"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": 4,
-      "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Функция word_count была вызвана 1 раз c параметрами: ('whole',)\n",
-            "Время выполнения функции word_count: 0:00:02.473883\n",
-            "Cлово whole встречается 176 раз\n"
-          ]
-        }
-      ],
-      "source": [
-        "# с одним декоратором\n",
-        "\n",
-        "res2 = full_info(word_count)\n",
-        "print(res2(\"whole\"))"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 5,
       "metadata": {
         "id": "ZE4Rfn-hh3k3"
       },
       "outputs": [],
       "source": [
-        "def fib(n):\n",
+        "def fib(n: int) -> int:\n",
         "    if n < 2:\n",
         "        return n\n",
         "    return fib(n - 2) + fib(n - 1)"
@@ -145,7 +125,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 5,
       "metadata": {
         "id": "Io94NyjiiXG4"
       },
@@ -154,10 +134,10 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Время выполнения функции fib: 0:00:10.642191\n",
+            "Время выполнения функции fib: 0:00:10.694082\n",
             "102334155\n",
             "--------------------\n",
-            "Время выполнения функции fib: 0:00:10.582545\n",
+            "Время выполнения функции fib: 0:00:10.744157\n",
             "102334155\n"
           ]
         }
@@ -174,7 +154,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 6,
       "metadata": {
         "id": "W9B3e-t9iTUj"
       },
@@ -183,7 +163,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Время выполнения функции fib: 0:00:10.582941\n",
+            "Время выполнения функции fib: 0:00:10.667713\n",
             "102334155\n",
             "--------------------\n",
             "Время выполнения функции fib: 0:00:00.000003\n",
